--- a/D3.html
+++ b/D3.html
@@ -8,7 +8,7 @@
 			<script> 
 				var body= d3.select("body");
 				var div= body.append ("div");
-				div.html ("Hola chica!!!!");
+				div.html ("!");
 					var header= div.append ("h1");
 					header.html("linda");
 					var button= div.append ("button"); 
