--- a/vizmodules/tech_browsertointro.html
+++ b/vizmodules/tech_browsertointro.html
@@ -48,7 +48,7 @@ var margin = {top: 1, right: 1, bottom: 6, left: 1},
     height = 500 - margin.top - margin.bottom;
 
 var formatNumber = d3.format(",.0f"),
-    format = function(d) { return formatNumber(d) + " TWh"; },
+    format = function(d) { return formatNumber(d) + " sessions"; },
     color = d3.scale.category20();
 
 var svg = d3.select("#chart").append("svg")
@@ -64,7 +64,7 @@ var sankey = d3.sankey()
 
 var path = sankey.link();
 
-d3.json("../data/d_behav_visitorflow.json", function(energy) {
+d3.json("../data/d_tech_browsertointro.json", function(energy) {
 
   sankey
       .nodes(energy.nodes)
