--- a/vizmodules/behav_visitorflow.html
+++ b/vizmodules/behav_visitorflow.html
@@ -48,7 +48,7 @@ var margin = {top: 1, right: 1, bottom: 6, left: 1},
     height = 500 - margin.top - margin.bottom;
 
 var formatNumber = d3.format(",.0f"),
-    format = function(d) { return formatNumber(d) + " TWh"; },
+    format = function(d) { return formatNumber(d) + " sessions"; },
     color = d3.scale.category20();
 
 var svg = d3.select("#chart").append("svg")
@@ -77,6 +77,7 @@ d3.json("../data/d_behav_visitorflow.json", function(energy) {
       .attr("class", "link")
       .attr("d", path)
       .style("stroke-width", function(d) { return Math.max(1, d.dy); })
+      .style("stroke", "#aaa")
       .sort(function(a, b) { return b.dy - a.dy; });
 
   link.append("title")
@@ -95,8 +96,27 @@ d3.json("../data/d_behav_visitorflow.json", function(energy) {
   node.append("rect")
       .attr("height", function(d) { return d.dy; })
       .attr("width", sankey.nodeWidth())
-      .style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
-      .style("stroke", function(d) { return d3.rgb(d.color).darker(2); })
+      //.style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
+      .style("fill", function(d) {
+      		if(d.name == "intro") {
+      			var _col = "#9BA3B1";
+      		} else if(d.name.match(/-S-/)) {
+      			var _col = "#E9B690";
+      		} else if(d.name.match(/-W-/)) {
+      			var _col = "#57B7B9";
+      		}
+      	return d.color = _col;
+      })
+      .style("stroke", function(d) {
+      	if(d.name == "intro") {
+      			var _col = "#9BA3B1";
+      		} else if(d.name.match(/-S-/)) {
+      			var _col = "#E9B690";
+      		} else if(d.name.match(/-W-/)) {
+      			var _col = "#57B7B9";
+      		}
+      	return d.color = _col;
+      })
     .append("title")
       .text(function(d) { return d.name + "\n" + format(d.value); });
 
