--- a/vizmodules/tech_browsertointro.html
+++ b/vizmodules/tech_browsertointro.html
@@ -95,7 +95,8 @@ d3.json("../data/d_tech_browsertointro.json", function(energy) {
   node.append("rect")
       .attr("height", function(d) { return d.dy; })
       .attr("width", sankey.nodeWidth())
-      .style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
+      .style("fill", "#57B7B9")
+      //.style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
       .style("stroke", function(d) { return d3.rgb(d.color).darker(2); })
     .append("title")
       .text(function(d) { return d.name + "\n" + format(d.value); });
